cabal-version:  2.4

name:           purescript
-- Note: don't add prerelease identifiers here! Add them in app/Version.hs and npm-package/package.json instead.
version:        0.16.0
synopsis:       PureScript Programming Language Compiler
description:    A small strongly, statically typed programming language with expressive types, inspired by Haskell and compiling to JavaScript.
category:       Language
stability:      experimental
homepage:       http://www.purescript.org/
bug-reports:    https://github.com/purescript/purescript/issues
author:         Phil Freeman <paf31@cantab.net>
maintainer:     Gary Burgess <gary.burgess@gmail.com>, Hardy Jones <jones3.hardy@gmail.com>, Harry Garrood <harry@garrood.me>, Christoph Hegemann <christoph.hegemann1337@gmail.com>, Liam Goodacre <goodacre.liam@gmail.com>, Nathan Faubion <nathan@n-son.com>

copyright:      (c) 2013-17 Phil Freeman, (c) 2014-19 Gary Burgess, (c) other contributors (see CONTRIBUTORS.md)
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
  bundle/build.sh
  bundle/README
  stack.yaml
  README.md
  INSTALL.md
  CONTRIBUTORS.md
  CONTRIBUTING.md
  .hspec

source-repository head
  type: git
  location: https://github.com/purescript/purescript

flag release
  description: Mark this build as a release build: prevents inclusion of extra info e.g. commit SHA in --version output)

  manual: False
  default: False

common defaults
  ghc-options: -Wall
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    DeriveGeneric
    DerivingStrategies
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NoImplicitPrelude
    PatternGuards
    PatternSynonyms
    RankNTypes
    RecordWildCards
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeFamilies
    ViewPatterns
  build-tool-depends:
    happy:happy ==1.20.0
  build-depends:
    -- NOTE: Please do not edit these version constraints manually. They are
    -- deliberately made narrow because changing the dependency versions in
    -- use can often result in changes in the compiler's behaviour. The
    -- PureScript compiler is an executable first and foremost, and only
    -- incidentally a library, and supporting a wide range of dependencies is
    -- not a goal.
    --
    -- These version ranges are generated from taking a Stackage snapshot and
    -- then generating PVP-compliant bounds based on that snapshot. You can
    -- update to a newer snapshot as follows:
    --
    -- 1. Remove all version constraints from this cabal file (apart from
    --    language-javascript).
    -- 2. Update stack.yaml as required to select a new snapshot, and check
    --    everything builds correctly with stack.
    -- 3. Run `stack sdist`; this will produce a source distribution including
    --    a modified version of the cabal file, which includes bounds for all
    --    dependencies (because of `pvp-bounds: both` in stack.yaml).
    -- 4. Copy the version bounds from the library's build-depends section
    --    to here.
    --
    -- This procedure allows us to take advantage of Stackage snapshots to
    -- easily perform updates, while also ensuring that the compiler will be
    -- built with (almost) the same install plan for both cabal and stack
    -- users.
    --
    -- We need to be especially careful with
    -- language-javascript, because it forms a part of the compiler's
    -- public API. In the case of language-javascript specifically, all FFI
    -- modules must be parseable by this library otherwise the compiler
    -- will reject them. It should therefore always be pinned to a single
    -- specific version.
    base >=4.14.3.0 && <4.15,

library
  import: defaults
  hs-source-dirs: src
  other-modules:
    Paths_purescript
  autogen-modules:
    Paths_purescript

executable purs
  import: defaults
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -fno-warn-unused-do-bind -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      purescript
  if flag(release)
    cpp-options: -DRELEASE
  else
    build-depends:
      gitrev >=1.2.0 && <1.4
  other-modules:
    Version
    Paths_purescript
  autogen-modules:
    Paths_purescript

test-suite tests
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  build-depends:
      purescript
  build-tool-depends:
      hspec-discover:hspec-discover -any
    -- we need the compiler's executable available for the ide tests
    , purescript:purs -any
  other-modules:
    Paths_purescript
